# TranslationOverlay

./: .gitignore  Build.bat  README.md  imgui.ini  main.cpp
ocr/: README.md  pyproject.toml
ocr/src/ocr/: __init__.py  main.py  ocr.py  server.py  translate.py
